# routes/auth.js
@@ -1,0 +1,28 @@
+const express = require('express')
+const passport = require('passport')
+const router = express.Router()
+
+// @desc         Auth with Google
+// @route        GET /auth/google 
+router.get('/google', passport.authenticate('google', { scope: ['profile'] }))
+
+// @desc        google auth callback
+// @route        GET /auth/google/callback
+router.get(
+    '/google/callback',
+    passport.authenticate('google', { failureRedirect: '/'}),
+    (req, res) => {
+        res.redirect('/dashboard')
+    }
+)
+
+// @desc    Logout user
+// @route   /auth/logout
+router.get('/logout', (req, res, next) => {
+    req.logout((error) => {
+        if (error) {return next(error)}
+        res.redirect('/')
+    })
+})
+
+module.exports = router
