# routes/index.js
@@ -1,11 +1,32 @@
-const router = require('express').Router()
+const express = require('express')
+const router = express.Router()
+const { ensureAuth, ensureGuest } = require('../middleware/auth')
 
 router.use('/', require('./swagger'))
 
-router.get('/', (req, res) => {
-    res.send('Hello world')
+const Tvshow = require('../models/Tvshow')
+
+// @desc    Login/Landing page
+// @route   GET /
+router.get('/', ensureGuest, (req, res) => {
+  res.render('login', {
+    layout: 'login',
+  })
 })
 
-router.use('/shows', require('./shows'))
+// @desc    Dashboard
+// @route   GET /dashboard
+router.get('/dashboard', ensureAuth, async (req, res) => {
+  try {
+    const tvshows = await Tvshow.find({ user: req.user.id }).lean()
+    res.render('dashboard', {
+      name: req.user.firstName,
+      tvshows,
+    })
+  } catch (err) {
+    console.error(err)
+    res.render('error/500')
+  }
+})
 
 module.exports = router
