# server.js
@@ -1,32 +1,92 @@
+const path = require('path')
 const express = require('express')
-const MongoClient = require('mongodb').MongoClient
-const bodyParser = require('body-parser')
-const mongodb = require('./data/database')
+const mongoose = require('mongoose')
+const dotenv = require('dotenv')
+const morgan = require('morgan')
+const exphbs = require('express-handlebars')
+const passport = require('passport')
+const session = require('express-session')
+const MongoStore = require('connect-mongo')
+const connectDB = require('./config/db')
+const swaggerUi = require('swagger-ui-express');
+const swaggerJsdoc = require('swagger-jsdoc')
+
+// Load config
+dotenv.config({ path: './config/config.env' })
+
+// Passport config 
+require('./config/passport')(passport)
+
+connectDB()
+
 const app = express()
 
-const port = process.env.PORT || 3000
+// Body parser
+app.use(express.urlencoded({ extended: false }))
+app.use(express.json())
 
-app.use(bodyParser.json())
-app.use((req, res, next) => {
-    res.setHeader('Access-Control-Allow-Origin', '*')
-    res.setHeader(
-        'Access-Control-Allow-Headers',
-        'Origin, X-Requested-with, Content-Type, Accept, Z-Key'
-    )
-    res.setHeader('Access-Control-Allow-Methods', 'GET, POST, PUT, DELETE, OPTIONS')
+// Logging
+if (process.env.NODE_ENV === 'development') {
+    app.use(morgan('dev'))
+}
+// Handlebars Helpers
+const {
+    formatDate,
+    stripTags,
+    truncate,
+    editIcon,
+    select,
+  } = require('./helpers/hbs')
+  
+  // Handlebars
+  app.engine(
+    '.hbs',
+    exphbs.engine({
+      helpers: {
+        formatDate,
+        stripTags,
+        truncate,
+        editIcon,
+        select,
+      },
+      defaultLayout: 'main',
+      extname: '.hbs',
+    })
+  )
+app.set('view engine', '.hbs')
+
+// sessions
+app.use(
+    session({
+        secret: 'keyboard cat',
+        resave: false,
+        saveUninitialized: false,
+        store: MongoStore.create({mongoUrl: process.env.MONGO_URI})
+}))
+
+// Passport middleware
+app.use(passport.initialize())
+app.use(passport.session())
+
+// Set global var
+app.use(function (req, res, next) {
+    res.locals.user = req.user || null
     next()
 })
+
+// Static folder
+app.use(express.static(path.join(__dirname, 'public')))
+
+
+
+// Routes
 app.use('/', require('./routes'))
+app.use('/auth', require('./routes/auth'))
+app.use('/tvshows', require('./routes/tvshows'))
 
-// process.on('uncaughtException', (err,origin) => {
-//     console.log(process.stderr.fd, `Caught Exception: ${err}\n` + `Exception origin: ${origin}`)
-// })
 
-mongodb.initDb((err) => {
-    if(err) {
-        console.log(err)
-    }
-    else {
-        app.listen(port, () => {console.log(`Daatabase is listening and node running on port ${port}`)})
-    }
-})
+const PORT = process.env.PORT || 3000
+
+app.listen(PORT, console.log(`Server running in ${process.env.NODE_ENV} mode on port ${PORT}`))
+
+
